<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context=".ui.SplashActivity">

    <TextView
        android:id="@+id/textViewLetsStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/lets_start"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_is_your_name"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="22dp"
        android:paddingVertical="10dp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>