<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/imageViewHappy"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_happy"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/imageViewAll"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_infinity"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/imageViewSad"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_sad"
            app:tint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutTopBar"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/greetings"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingHorizontal="20dp"
        android:textAlignment="center"
        android:text="@string/quote"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <View
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_below="@id/textViewQuote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/buttonNewQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_button"
        android:text="@string/new_quote"
        android:textAllCaps="true" />


</RelativeLayout>